# riff-io

./: Cargo.toml  README.md
examples/: copy.rs  copy_metadata.rs  view.rs
src/: lib.rs  writer.rs
