[package]
name = "riff-io"
description = "Library for reading meta-data and contents from RIFF files"
license = "MIT"
authors = ["Andy Grove <andygrove73@gmail.com>"]
repository = "https://github.com/andygrove/riff-io"
keywords = ["riff"]
readme = "README.md"
version = "0.1.1"
edition = "2018"

[dependencies]
memmap = "0.7"